kubernetes-manifests/cryptocurrently-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cryptocurrently-svc
spec:
  type: ClusterIP
  selector:
    name: cryptocurrently-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
