kubernetes-manifests/service-cryptocurrently.yaml
apiVersion: v1
kind: Service
metadata:
  name: cryptocurrently
spec:
  type: LoadBalancer
  selector:
    app: cryptocurrently
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 8080
